--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "checkerboardjs",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Easily draw transparency pattern on canvas when flattenning images",
   "main": "index.js",
   "scripts": {
@@ -9,6 +9,10 @@
   "keywords": [
     "canvas"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/VityaSchel/checkerboardjs"
+  }
   "author": "vityaschel <vityaschel@utidteam.com> (https://vityaschel.utidteam.com/)",
   "license": "MIT"
 }
