--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "checkerboardjs",
-  "version": "1.0.11",
+  "version": "1.1.0",
   "description": "Easily draw transparency pattern on canvas when flattenning images",
   "main": "index.min.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel -o index.min.js -- index.js && terser --compress --mangle --output index.min.js -- index.min.js"
   },
   "keywords": [
     "canvas"
@@ -14,5 +14,8 @@
     "url": "https://github.com/VityaSchel/checkerboardjs"
   },
   "author": "vityaschel <vityaschel@utidteam.com> (https://vityaschel.utidteam.com/)",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-preset-env": "^1.7.0"
+  }
 }
